--- a/analyze_replication.Rmd
+++ b/analyze_replication.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Noisy Kids Replication Analysis"
 author: "Dan Yurovsky"
-date: "July 15, 2015"
+date: "August 03, 2015"
 output:
   html_document:
     highlight: tango
@@ -9,7 +9,7 @@ output:
 ---
 ```{r setup, include=FALSE}
 library(knitr)
-opts_chunk$set(message=FALSE, warning=FALSE, cache=TRUE)
+opts_chunk$set(message=FALSE, warning=FALSE, cache=FALSE)
 ```
 
 Load libraries
@@ -25,6 +25,7 @@ library(dplyr)
 library(tidyr)
 library(ggplot2)
 library(readr)
+library(jsonlite)
 ```
 
 
@@ -69,9 +70,9 @@ code.literal <- function(value,trial.type,condition) {
   
   literal = rep(0,length(value))
   
-  literal[trial.type == "Familiar" & value == "Y"] <- 1
+  literal[trial.type == "Training" & value == "Y"] <- 1
   literal[condition == "Control" & value == "Y"] <- 1
-  literal[condition != "Control" & trial.type == "Novel" & value != "Y"] <- 1
+  literal[condition != "Control" & trial.type == "Test" & value != "Y"] <- 1
   
   return(literal)
 }
@@ -86,17 +87,15 @@ child.long.data <- bind_rows(lapply(child.files,read.child)) %>%
   ungroup() %>%
   mutate(condition = factor(condition,
                             levels = c("Normal", "Implausible", "Control")),
-         trial.type = factor(ifelse(trial <= 8, "Familiar", "Novel"))) %>%
+         trial.type = factor(ifelse(trial <= 8, "Training", "Test"))) %>%
   mutate(Literal = code.literal(value,trial.type,condition))
 
 child.demos$subj = unique(child.long.data$subj)
 child.long.data %<>% left_join(child.demos) %>%
-  filter(age >= 4, age <= 6) %>%
+  filter(age >= 4, age <= 6, Exclude == FALSE) %>%
   mutate(experiment = "replication") %>%
   select(experiment,subj,age,condition,trial.type,Literal)
 ```
-
-
 
 Load original child data
 ```{r,cache=FALSE}
@@ -112,39 +111,78 @@ original.child.long.data <- gather(original.child.data,item,
                                          "wooden_blocks", "flowers_basket",
                                          "house_door","bread_peanutbutter",
                                          "knife_fork"), 
-                             "Familiar", "Novel")) %>%
-  rename(Literal = response) %>%
-  mutate(Literal = 1 - Literal) %>%
+                             "Training", "Test")) %>%
+  rowwise() %>%
+  mutate(Literal = ifelse(trial.type == "Training", 1 - response, response)) %>% 
   filter(age >= 4, age <= 6) %>%
   mutate(experiment = "original") %>%
   ungroup() %>%
   select(experiment, subj, age, condition,trial.type, Literal) 
 
 all.child.long.data <- bind_rows(child.long.data,original.child.long.data) %>%
-  group_by(experiment,condition, trial.type)
+  group_by(experiment,condition, trial.type) %>%
+  ungroup() %>%
+  mutate(trial.type = factor(trial.type, levels = c("Training", "Test"))) %>%
+  group_by(experiment,condition,trial.type)
 ```
 
-Analyze child data
+Load Adult data
+```{r,cache=FALSE}
+all.adult.files <- paste0("adult_data/",
+                          list.files(path = "adult_data/", pattern = '*.json', 
+                                     all.files = FALSE))
+jsons <- lapply(all.adult.files,fromJSON)
+workers <- sapply(jsons,function(x) x$WorkerId)
+adult.data <- bind_rows(sapply(jsons,function(x) x$answers$data,simplify=FALSE))
 
+adult.data$worker <- unlist(lapply(workers, function (x) rep(x,15)))
+```
+
+Munge adult data
+```{r}
+#Exclude multiple hits from a single participant
+firstHits <- adult.data %>%
+  group_by(worker) %>%
+  summarise(timeStamp = min(timestamp))
+
+adult.long.data <- inner_join(adult.data,firstHits) %>%
+  ungroup() %>%
+  rename(condition = order, subj = worker) %>%
+  mutate(response = ifelse(response == "Y",TRUE,FALSE),
+         condition = ifelse(condition == 0,"Normal","Implausible"),
+         trial.type = ifelse(trialnum > 8, "Test", "Training"),
+         experiment = "adult", age = NA) %>%
+  mutate(condition = factor(condition,levels = c("Normal", "Implausible"))) %>%
+  rename(Literal = response) %>%
+  # mutate(Literal = ifelse(trial.type == "Training", response, 1 - response)) %>%
+  select(experiment, subj, age, condition, trial.type, Literal)
+```
+
+
+Analyze child data
 ```{r child_analysis}
-ns <- all.child.long.data %>% 
+all.long.data <- bind_rows(all.child.long.data,adult.long.data) %>%
+  mutate(trial.type = factor(trial.type, levels = c("Training", "Test"))) %>%
+  group_by(experiment, condition, trial.type) 
+
+ns <- all.long.data %>% 
   ungroup() %>% 
   select(experiment,trial.type,condition,subj) %>% 
   distinct() %>% 
   group_by(experiment,condition, trial.type) %>% 
   summarise(n = n())
 
-kable(filter(ns, trial.type == "Novel"))
+kable(filter(ns, trial.type == "Test"))
 
-child.results <- multi_boot(all.child.long.data, column="Literal",
+all.results <- multi_boot(all.long.data, column="Literal",
              statistics_functions = c("ci_lower","ci_upper")) %>%
-  left_join(summarise(all.child.long.data,Literal = mean(Literal))) %>%
+  left_join(summarise(all.long.data,Literal = mean(Literal))) %>%
   left_join(ns)
 ```
 
 Plot
 ```{r child_plot,fig.height=5,fig.width=8, cache = FALSE}
-ggplot(child.results, aes(x=condition, y=Literal,fill=trial.type)) +
+ggplot(all.results, aes(x=condition, y=Literal,fill=trial.type)) +
   geom_bar(stat="identity",position=position_dodge(1))+
   facet_grid(experiment~ trial.type) +
   geom_linerange(aes(ymin = ci_lower,
