--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -43,13 +43,13 @@ Word Count:
 \begin{document}
 \maketitle
 
-Imagine you heard someone say that they ``had carrots and \emph{bees} for dinner.'' What could explain this strange utterance? One possibility is that the speaker is being silly, or perhaps really enjoys bees with her carrots. Alternatively, the speaker could have meant that she had \emph{peas} for dinner, but either she misspoke or you misheard her. If so, this error could explain away your strange perception, and cause you to come to a very different interpretation of what she said \cite{pearl1988}. This inferential process, combining acoustic information with prior expectations about what speakers might say is a critical part of why human language processing is so flexible and robust.
+Imagine Bob heard Alice say ``I had carrots and \emph{bees} for dinner.'' Perhaps she visited an exotic restaurant, and he should follow up and ask how they tasted. But perhaps she was joking, or perhaps he misheard her or she misspoke. Interpreting her utterance requires integrating perceptual information about what he heard with his expectations: about both what words usually go with ``carrots'' and ``dinner'' and also what foods people usually eat. Statistical language processing systems operate using a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}. 
 
-This key insight---that language is a \emph{noisy channel}, and that the listener can correct for perceptual errors using high-level linguistic expectations---lead to a revolution in statistical natural language processing \cite{jelinek1976, shannon1948}. Recently, the noisy channel framework has been used an ideal observer model in human language processing, explaining a variety of phenomena in both language perception and production \cite{cayards2008, levy2008, jaeger2010, kleinschmidt2015}. However, a key prediction of this framework remains untested.
+Noisy channel principles provide a powerful framework for explaining how the human language processing system operate in complex and uncertain real-time communications  \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this kind of information-theoretic view of human language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability. In one demonstration of this sort of integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (e.g., the omission of the word ``to''). Adult comprehenders were able to correct these errors. They corrected them at especially high rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). But they corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible.
 
-If we hear someone say that they ``had carrots and \emph{bees} for dinner,'' when should we rely on our perceptual signal, and when should we instead privilege our expectation that the speaker probably doesn't like to eat bees? If we are ideal observers, we should rely on each of these cues in proportion to their reliability \cite{ernst2002, jacobs1999}. For instance, if we are in a quiet room, and have additional bottom-up visual information from the speaker's mouth, we should be more likely to conclude that she said ``bees'' \cite{mcgurk1976}. On the other hand, if we are having trouble hearing because it is loud, or because we are speaking on a cell-phone which reduces the audio quality, we should be more inclined to think we misheard \cite{schroeder1985}. Similarly, if we have never met this speaker before, or know her to be serious and well-spoken, we should think ourselves to have misheard. But, if the speaker is our friend who we know to prone to being silly, we should be more likely to think we correctly heard ``bees.''
+Is children's language comprehension rooted in the same kind of expectation-based processing? 
 
-\citeA{gibson2013} tested these predictions independently using a written sentence comprehension paradigm with adults. They presented adults with semantically implausible sentences (i.e. The mother gave the candle the daughter) which could have been produced by small typographical errors in otherwise much more plausible sentences (i.e. the mother gave the candle \emph{to} to the daughters). They showed that adults were more likely to come to correct the error, and come to the semantically more plausible interpretation if they had reason to believe there was a lot of noise in the communication channel (i.e. they had previously observed many previous typos). In a separate condition, they also showed that adults were more likely to come to the semantically implausible, literal interpretation if they had reason to believe that they were in a silly context (i.e. they had previously read many implausible sentences).
+% If we hear someone say that they ``had carrots and \emph{bees} for dinner,'' when should we rely on our perceptual signal, and when should we instead privilege our expectation that the speaker probably doesn't like to eat bees? If we are ideal observers, we should rely on each of these cues in proportion to their reliability \cite{ernst2002, jacobs1999}. For instance, if we are in a quiet room, and have additional bottom-up visual information from the speaker's mouth, we should be more likely to conclude that she said ``bees'' \cite{mcgurk1976}. On the other hand, if we are having trouble hearing because it is loud, or because we are speaking on a cell-phone which reduces the audio quality, we should be more inclined to think we misheard \cite{schroeder1985}. Similarly, if we have never met this speaker before, or know her to be serious and well-spoken, we should think ourselves to have misheard. But, if the speaker is our friend who we know to prone to being silly, we should be more likely to think we correctly heard ``bees.''
 
 In the following experiments, we adapt \citeA{gibson2013}'s paradigm to test three novel predictions. First, we use a spoken language paradigm and a simpler model of noise (i.e. literally acoustic noise) to show that the same predictions hold in an environment more like daily language processing. Second, we show that listeners are sensitive to both of these manipulations in the same context, and adapt simultaneously to changing speaker expectations and noise levels. Third, we show that this flexible adaption occurs not only in adults, but also in preschool-aged children.
 
