small changes, preparing for merge issues

--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -70,7 +70,7 @@ In the following experiments, we adapt \citeA{gibson2013}'s paradigm to test thr
         \subfigure[]{
             \label{fig:training}
             \includegraphics[width=0.4\textwidth]{figures/training.pdf}
-        }
+        }\\
         \subfigure[]{
            \label{fig:testing}
            \includegraphics[width=0.4\textwidth]{figures/testing.pdf}
@@ -95,7 +95,7 @@ Stimuli for Experiment 1 were a series of screens on which participants saw two 
 
 \subsubsection{Procedure}
 
-In each trial, participants saw two pictures on the screen, and heard a short sentence. Children saw two kinds of trials that manipulated the relationship of the pictures to each other. On introductory trials, children ... FIXME
+On each trial, participants saw two pictures on the screen and heard a short sentence referring to one of them. Each trial contained one semantically plausible picture, and one semantically implausible picture. On exposure trials, these pictures, and their corresponding referring expression that was used for them was quite distinct. Children saw two kinds of trials that manipulated the relationship of the pictures to each other. On introductory trials, children ... FIXME
 
 \subsection{Results and Discussion}
 
