--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -43,11 +43,11 @@ Word Count:
 \begin{document}
 \maketitle
 
-Imagine Bob heard Alice say ``I had carrots and \emph{bees} for dinner.'' Perhaps she visited an exotic restaurant, and he should follow up and ask how they tasted. But perhaps she was joking, or perhaps he misheard her or she misspoke. Interpreting her utterance requires integrating perceptual information about what he heard with his expectations: about both what words usually go with ``carrots'' and ``dinner'' and also what foods people usually eat. Statistical language processing systems operate using a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}. 
+Imagine Bob heard Alice say ``I had carrots and bees for dinner.'' Perhaps she visited an exotic restaurant, and he should follow up and ask how they tasted. Or perhaps he misheard her, or she misspoke. Interpreting her utterance requires integrating perceptual information about what he heard with his expectations: about both what words usually go with ``carrots'' and ``dinner'' and also what foods people usually eat. Statistical language processing systems operate using a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}. 
 
-Noisy channel principles provide a powerful framework for explaining how the human language processing system operate in complex and uncertain real-time communications  \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this kind of information-theoretic view of human language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability. In one demonstration of this sort of integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (e.g., the omission of the word ``to''). Adult comprehenders were able to correct these errors. They corrected them at especially high rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). But they corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible.
+Noisy channel principles provide a powerful framework for explaining how the human language processing system operate in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of human language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability. In one demonstration of this sort of integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (e.g., the omission of the word ``to''). Adult comprehenders were able to correct these errors, and they corrected them at especially high rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). They also corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible. Together, these manipulations suggested a flexible weighting on the perceptual signal---how noisy is the channel?---and prior expectations---how plausible is the speaker?.
 
-Is children's language comprehension rooted in the same kind of expectation-based processing? 
+Is children's language comprehension rooted in the same kind of flexible, expectation-based processing? 
 
 % If we hear someone say that they ``had carrots and \emph{bees} for dinner,'' when should we rely on our perceptual signal, and when should we instead privilege our expectation that the speaker probably doesn't like to eat bees? If we are ideal observers, we should rely on each of these cues in proportion to their reliability \cite{ernst2002, jacobs1999}. For instance, if we are in a quiet room, and have additional bottom-up visual information from the speaker's mouth, we should be more likely to conclude that she said ``bees'' \cite{mcgurk1976}. On the other hand, if we are having trouble hearing because it is loud, or because we are speaking on a cell-phone which reduces the audio quality, we should be more inclined to think we misheard \cite{schroeder1985}. Similarly, if we have never met this speaker before, or know her to be serious and well-spoken, we should think ourselves to have misheard. But, if the speaker is our friend who we know to prone to being silly, we should be more likely to think we correctly heard ``bees.''
 
