--- a/paper/noisy_kids.bib
+++ b/paper/noisy_kids.bib
@@ -2,18 +2,56 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Dan Yurovsky at 2015-09-18 13:53:24 -0700 
+%% Created for Michael Frank at 2015-09-18 15:12:30 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{noveck2001,
+	Author = {Noveck, Ira A},
+	Date-Added = {2015-09-18 22:12:27 +0000},
+	Date-Modified = {2015-09-18 22:12:30 +0000},
+	Journal = {Cognition},
+	Number = {2},
+	Pages = {165--188},
+	Publisher = {Elsevier},
+	Title = {When children are more logical than adults: Experimental investigations of scalar implicature},
+	Volume = {78},
+	Year = {2001}}
+
+@book{harris2012,
+	Author = {Harris, Paul L},
+	Date-Added = {2015-09-18 22:11:19 +0000},
+	Date-Modified = {2015-09-18 22:11:23 +0000},
+	Publisher = {Harvard University Press},
+	Title = {Trusting what you're told: How children learn from others},
+	Year = {2012}}
+
+@article{carpenter1998,
+	Author = {Carpenter, Malinda and Nagell, Katherine and Tomasello, Michael and Butterworth, George and Moore, Chris},
+	Date-Added = {2015-09-18 22:10:59 +0000},
+	Date-Modified = {2015-09-18 22:11:00 +0000},
+	Journal = {Monographs of the society for research in child development},
+	Pages = {i--174},
+	Publisher = {JSTOR},
+	Title = {Social cognition, joint attention, and communicative competence from 9 to 15 months of age},
+	Year = {1998}}
+
+@book{clark2009,
+	Author = {Clark, Eve V},
+	Date-Added = {2015-09-18 22:10:34 +0000},
+	Date-Modified = {2015-09-18 22:11:00 +0000},
+	Publisher = {Cambridge University Press},
+	Title = {First language acquisition},
+	Year = {2009}}
+
 @article{schroeder1985,
 	Author = {Schroeder, M R and Atal, B S},
 	Date-Added = {2015-09-18 20:52:23 +0000},
 	Date-Modified = {2015-09-18 20:53:24 +0000},
-	Journal = { Proceedings of the IEEE International Conference on Acoustics, Speech, and Signal Processing},
+	Journal = {Proceedings of the IEEE International Conference on Acoustics, Speech, and Signal Processing},
 	Pages = {937--940},
 	Title = {Code-excited linear prediction (CELP): speech at very low bit rates},
 	Volume = {10},
